--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -15,6 +15,12 @@ html {
   scroll-behavior: smooth;
   background-color: #0a0a0c !important;
   height: 100%;
+  scrollbar-width: none; /* Firefox */
+  -ms-overflow-style: none; /* IE/Edge */
+}
+
+html::-webkit-scrollbar, body::-webkit-scrollbar {
+  display: none; /* Chrome/Safari */
 }
 
 body {
